--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "g": "^2.0.1",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.5.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
